fix(chat-bubbles): Improve `Thought for X seconds` readability on hover state

--- a/src/sass/elements/_right--main.scss
+++ b/src/sass/elements/_right--main.scss
@@ -90,7 +90,17 @@
     /* Thiking text parent (with "Thought for X seconds" note) */
     .edb250b1 {
 
-        /* Thinking text */
+        /* Thinking time note: "Thought for X seconds" */
+        .a6d716f5 {
+            transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, transform 0.15s $easeOutCubic;
+
+            &:hover {
+                @include bg-accent-inverse;
+                transform: scale(1.02);
+            }
+        }
+
+        /* Thinking process texts */
         .e1675d8b {
             --thinking-p-left: 13px; // this is from ds deafult
 
